@@ -1,9 +1,0 @@
-  /*------------------------------- DOM: DATA --------------------------------*/
-
-  Fuse.addNS('Dom');
-
-  Data =
-  Fuse.Dom.Data = { 
-    '1': { },
-    '2': { }
-  };
